# bookmark

./: README.md  index.html  package.json  pnpm-lock.yaml
src/: App.vue  main.css  main.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs  serve.rs
src/components/: Contextmenu.vue
