[package]
name = "bookmark"
version = "0.1.0"
description = "A Small Bookmark App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1", features = [] }

[dependencies]
tauri = { version = "1", features = [ "clipboard-write-text", "clipboard-read-text", "window-minimize", "window-unmaximize", "window-unminimize", "window-start-dragging", "window-maximize", "window-close", "window-hide", "window-show", "shell-open"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = "0.4.38"

[features]
# This feature is used for production builds or when a dev server is not specified, DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
